# Yours-Truly-Engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Window.cpp  Yours-Truly-Engine.sln  Yours-Truly-Engine.vcxproj  Yours-Truly-Engine.vcxproj.filters  main.cpp  run-clang-format.ps1  simple.frag  simple.vert
Dependencies/OpenALSoft/: OpenAL32.lib  common.lib
Dependencies/assimp/code/: C4DImporter.cpp  C4DImporter.h  OpenGEXImporter.cpp  STEPFileReader.cpp  Version.cpp
Dependencies/assimp/contrib/openddlparser/code/: DDLNode.cpp  OpenDDLCommon.cpp  OpenDDLExport.cpp  OpenDDLParser.cpp  Value.cpp
Dependencies/assimp/contrib/openddlparser/include/openddlparser/: DDLNode.h  OpenDDLCommon.h  OpenDDLExport.h  OpenDDLParser.h  OpenDDLParserUtils.h  Value.h
Dependencies/assimp/contrib/zlib/: gzguts.h  zconf.h  zlib.h
Dependencies/assimp/project/: assimp.vcxproj  assimp.vcxproj.filters
Dependencies/constexpr/: README.md  cx_utils.h
Dependencies/glbinding/: Version
Dependencies/gorilla/: gorilla.lib  gorillaD.lib
Dependencies/libsoundio/: soundio.lib
Dependencies/stb/: stb_image.cpp  stb_image.h
Dependencies/tiny_obj_loader/: tiny_obj_loader.h
Dependencies/vulkan/vulkan/: vk_cpp.hpp  vkel.c  vkel.h  vkel_gen.py
ExampleProject/: CMakeLists.txt  WinMain.cpp  main.cpp
Shaders/: compileShaders.bat  frag.spv  simple.frag  simple.vert  vert.spv
YTE/: CMakeLists.txt
YTE/Audio/: Audio.hpp  AudioSystem.cpp  AudioSystem.hpp  CMakeLists.txt  Precompiled.cpp
YTE/Core/: CMakeLists.txt  Component.cpp  Component.hpp  Composition.cpp  Composition.hpp  Delegate.hpp  Engine.cpp  Engine.hpp  EventHandler.cpp  EventHandler.hpp  ForwardDeclarations.hpp  Interace.hpp  Precompiled.cpp  PrivateImplementation.hpp  TargetDefinitions.hpp  Types.hpp
YTE/DataStructures/: AudioSystem.cpp  CMakeLists.txt  IntrusiveList.hpp  Precompiled.cpp  UniqueHandle.hpp
YTE/Graphics/: CMakeLists.txt  ForwardDeclarations.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  Instance.cpp  Instance.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp  Model.hpp  Precompiled.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderAttributeDescriptions.hpp  ShaderDescriptions.hpp  Texture.hpp  TextureLoader.cpp  TextureLoader.hpp  TileMap.cpp  TileMap.hpp  Vertex.hpp  View.cpp  View.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanPrimitives.cpp  VulkanPrimitives.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
YTE/Platform/: CMakeLists.txt  ForwardDeclarations.hpp  Gamepad.hpp  GamepadSystem.hpp  KeyCodes.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.hpp  Precompiled.cpp  Window.cpp  Window.hpp
YTE/Platform/Windows/: CMakeLists.txt  KeyCodes_Windows.hpp  Keyboard_Windows.cpp  WindowData_Windows.hpp  Window_Windows.cpp
YTE/Reflection/: CMakeLists.txt  Precompiled.cpp  Reflectable.hpp  ReflectionSystem.hpp  Type.hpp
YTE/StandardLibrary/: BlockAllocator.hpp  CMakeLists.txt  CompileTimeString.cpp  CompileTimeString.hpp  HashMap.hpp  Precompiled.cpp
cmake/: EngineSystemSetup.cmake  ListChildren.cmake  SourceGroupSetup.cmake
