set(Yours_Truly_Engine_Source ${Yours_Truly_Engine_Source} ForwardDeclarations.hpp)
set(Yours_Truly_Engine_Source ${Yours_Truly_Engine_Source} Gamepad.hpp)
set(Yours_Truly_Engine_Source ${Yours_Truly_Engine_Source} GamepadSystem.hpp)
set(Yours_Truly_Engine_Source ${Yours_Truly_Engine_Source} Keyboard.cpp Keyboard.hpp)
set(Yours_Truly_Engine_Source ${Yours_Truly_Engine_Source} KeyCodes.hpp)
set(Yours_Truly_Engine_Source ${Yours_Truly_Engine_Source} Mouse.hpp)
set(Yours_Truly_Engine_Source ${Yours_Truly_Engine_Source} Window.cpp Window.hpp)

add_subdirectory(Windows)
